# secretknowledge

./: .gitignore  README.md  io.github.hersaintel.secretknowledge.json  io.github.secretknowledge.json  io.hersaintel.secretknowledge.json  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/io.github.hersaintel.secretknowledge/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/io.github.hersaintel.secretknowledge.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-io.github.hersaintel.secretknowledge.json/: build-pygobject  build-secret-knowledge  cleanup  finish  init
.flatpak-builder/cache/refs/heads/x86_64-io.hersaintel.secretknowledge.json/: init
.flatpak-builder/cache/summaries/: 3856682a422b07309e4fe47f623b62b48efb0c862bc0b03bd455b2ab45cdeabd-d905392348e918b5ea3e3434ba246e92d46081e3948213cf63b9e9aad730a55c.delta  3b352ac21c8ff9a919c628ee2036ab74994cd92088d5ba8f7738bdd8b21c6fc1-d905392348e918b5ea3e3434ba246e92d46081e3948213cf63b9e9aad730a55c.delta  9b00c104b0455924cab93558684c051ba2a86e466cd7d65330d075194523ef01-d905392348e918b5ea3e3434ba246e92d46081e3948213cf63b9e9aad730a55c.delta
.flatpak-builder/checksums/: x86_64-io.github.hersaintel.secretknowledge.json  x86_64-io.hersaintel.secretknowledge.json
.flatpak-builder/git/https_github.com_hersaintel_secretknowledge.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_hersaintel_secretknowledge.git/objects/pack/: pack-859db68f895d876b4a8847b9aec608d849f0facc.idx  pack-859db68f895d876b4a8847b9aec608d849f0facc.pack  pack-859db68f895d876b4a8847b9aec608d849f0facc.rev  pack-9cd2309ea9e66bd1278a433389012c729a7c87be.idx  pack-9cd2309ea9e66bd1278a433389012c729a7c87be.pack  pack-9cd2309ea9e66bd1278a433389012c729a7c87be.rev  pack-cc00b86465d6d03269f68d5e5597fbe4b85e9f1c.idx  pack-cc00b86465d6d03269f68d5e5597fbe4b85e9f1c.pack  pack-cc00b86465d6d03269f68d5e5597fbe4b85e9f1c.rev  pack-ea061088b676c093fa935de0760b2d295be81b82.idx  pack-ea061088b676c093fa935de0760b2d295be81b82.pack  pack-ea061088b676c093fa935de0760b2d295be81b82.rev
.flatpak-builder/git/https_github.com_hersaintel_secretknowledge.git/refs/tags/: v2.0.0
.github/workflows/: snap.yml
data/: io.github.hersaintel.secretknowledge.desktop.in  io.github.hersaintel.secretknowledge.metainfo.xml  io.github.hersaintel.secretknowledge.metainfo.xml.in  io.github.secretknowledge.desktop  io.github.secretknowledge.metainfo.xml  io.hersaintel.secretknowledge.desktop  io.hersaintel.secretknowledge.desktop.in  io.hersaintel.secretknowledge.metainfo.xml  io.hersaintel.secretknowledge.metainfo.xml.in  meson.build  secret-knowledge-v2.html
po/: en.po  meson.build
snap/: snapcraft.yaml
snap/local/: secret-knowledge.sh
src/: main.py  meson.build  secret-knowledge.in
src/secret_knowledge/: __init__.py  main.py
